<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="io.uscool.contactapp.fragment.SendMessageFragment">

    <LinearLayout
        android:id="@+id/layout_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            style="@style/profile_image"
            android:id="@+id/profile_image"
            android:contentDescription="@string/des_profile_image"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/msg_description"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/show_name"
                style="@style/contact_text"/>

            <TextView
                android:id="@+id/show_number"
                style="@style/contact_text"/>


            <EditText
                android:id="@+id/input_message"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_request_sms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/lbl_send"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/profile_image"
            android:id="@+id/profile_image2"
            android:contentDescription="@string/des_profile_image"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/msg_sit_back"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/msg_manual_otp"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/inputOtp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:hint="@string/lbl_enter_otp"
            android:inputType="number"
            android:maxLength="6"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/lbl_submit"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:visibility="gone" />

</RelativeLayout>
